optimizacion de imagenes , actualizacion y correccion de diseño

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <img class="prod-foto" src="./img/oferta.webp" alt="imagen del interior de una gabinete">
           </div>
           <div class="boton">
-            <a href="./secciones/orders.html" class="buy">comprar</a>
+            <a href="./secciones/orders.html" class="buy">comprar = $250.000</a>
           </div>
         </div>
 
@@ -115,7 +115,7 @@
               alt="imagen de un portatil gamer">
           </div>
           <div class="boton">
-            <a href="./secciones/orders.html" class="buy">comprar</a>
+            <a href="./secciones/orders.html" class="buy">comprar = $340.000</a>
           </div>
         </div>
 
@@ -124,7 +124,7 @@
             <img class="prod-foto" src="./img/grafica.webp" alt="imagen de una grafica gtx">
           </div>
           <div class="boton">
-            <a href="./secciones/orders.html" class="buy">comprar</a>
+            <a href="./secciones/orders.html" class="buy">comprar = $170.000</a>
           </div>
         </div>
 
@@ -133,7 +133,7 @@
             <img class="prod-foto" src="./img/setupmini.webp" alt="imagen de un setup completo y un portatil">
           </div>
           <div class="boton">
-            <a href="./secciones/orders.html" class="buy">comprar</a>
+            <a href="./secciones/orders.html" class="buy">comprar = 450.000</a>
           </div>
         </div>
 
@@ -142,7 +142,7 @@
             <img class="prod-foto" src="./img/inicio.webp" alt="imagen del interior de una gabinete">
           </div>
           <div class="boton">
-            <a href="./secciones/orders.html" class="buy">comprar</a>
+            <a href="./secciones/orders.html" class="buy">comprar = $290.000</a>
           </div>
         </div>
 
@@ -151,7 +151,7 @@
             <img class="prod-foto" src="./img/mother2.webp" alt="mother msi">
           </div>
           <div class="boton">
-            <a href="./secciones/orders.html" class="buy">comprar</a>
+            <a href="./secciones/orders.html" class="buy">comprar = $40.000</a>
           </div>
         </div>
       </div>
