--- a/secciones/Products.html
+++ b/secciones/Products.html
@@ -105,9 +105,7 @@
               <img class="prod-foto" src="../img/mouse.webp" alt="mouse gaming">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $8.000</a>
             </div>
           </div>
 
@@ -116,9 +114,7 @@
               <img class="prod-foto" src="../img/teclado.webp" alt="teclado gaming">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $15.000</a>
             </div>
           </div>
 
@@ -127,9 +123,7 @@
               <img class="prod-foto" src="../img/perisfericos.webp"alt="imagen en la cual hay  un teclado, mouse ,auriculares y un joystick">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $30.000</a>
             </div>
           </div>
 
@@ -138,9 +132,7 @@
               <img class="prod-foto" src="../img/setup.webp" alt="imagen de un setup gaming">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $350.000</a>
             </div>
           </div>
 
@@ -149,9 +141,7 @@
               <img class="prod-foto" src="../img/perisfericos2.webp"alt="imagen en la cual hay  un teclado">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $19.000</a>
             </div>
           </div>
 
@@ -160,9 +150,7 @@
               <img class="prod-foto" src="../img/perisfericos3.webp" alt="auriculares aureox">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $16.000</a>
             </div>
           </div>
         </div>
