--- a/secciones/skinsCounter.html
+++ b/secciones/skinsCounter.html
@@ -104,9 +104,7 @@
               <img class="prod-foto" src="../img/counter1.webp" alt="skin de awp csgo">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $1500</a>
             </div>
           </div>
 
@@ -115,9 +113,7 @@
               <img class="prod-foto" src="../img/counter2.webp" alt="skin de m4 csgo">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $2500</a>
             </div>
           </div>
 
@@ -126,9 +122,7 @@
               <img class="prod-foto" src="../img/counter3.webp" alt="skin de awp csgo">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $1000</a>
             </div>
           </div>
 
@@ -137,9 +131,7 @@
               <img class="prod-foto" src="../img/counter4.webp" alt="skin de desert digle de csgo">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $900</a>
             </div>
           </div>
 
@@ -148,9 +140,7 @@
               <img class="prod-foto" src="../img/counter5.webp" alt="skin de awp acuatica de csgo">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $700</a>
             </div>
           </div>
 
@@ -159,9 +149,7 @@
               <img class="prod-foto" src="../img/counter6.webp" alt="skin ak 47 de csgo">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $850</a>
             </div>
           </div>
         </div>
