--- a/secciones/funkoWorld.html
+++ b/secciones/funkoWorld.html
@@ -101,9 +101,7 @@
               <img class="prod-foto" src="../img/kimet.webp" alt="funko giyu tomioka">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $8.400</a>
             </div>
           </div>
 
@@ -112,9 +110,7 @@
               <img class="prod-foto" src="../img/kimet2.webp" alt="funko muzan kibutsuji ">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $9.900</a>
             </div>
           </div>
 
@@ -123,9 +119,7 @@
               <img class="prod-foto" src="../img/kimet3.webp" alt="funko nezuko">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $7.000</a>
             </div>
           </div>
 
@@ -134,9 +128,7 @@
               <img class="prod-foto" src="../img/kimet4.webp" alt="funko tanjiro">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $10.000</a>
             </div>
           </div>
 
@@ -145,9 +137,7 @@
               <img class="prod-foto" src="../img/kimet5.webp" alt="funko tanjiro">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $8.900</a>
             </div>
           </div>
 
@@ -156,9 +146,7 @@
               <img class="prod-foto" src="../img/kimet6.webp" alt="funko tanjiro">
             </div>
             <div class="boton">
-              <a href="orders.html" class="buy">
-                comprar
-              </a>
+              <a href="orders.html" class="buy">comprar = $9.600</a>
             </div>
           </div>
         </div>
